// file: pkg/health/proto/responses/run_check_response.proto
edition = "2023";

package gcommon.v1.health;

import "google/protobuf/duration.proto";
import "pkg/common/proto/health_status.proto";
import "pkg/common/proto/error.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/health/proto";

/**
 * Response message for manually running a health check.
 * Contains the result of executing a health check on demand.
 */
message RunCheckResponse {
  // Success status
  bool success = 1;

  // Check ID that was executed
  string check_id = 2;

  // Health status result
  gcommon.v1.common.HealthStatus status = 3;

  // Execution timestamp
  google.protobuf.Timestamp executed_at = 4;

  // Execution duration
  google.protobuf.Duration execution_time = 5;

  // Check result message
  string message = 6;

  // Error information if check failed
  gcommon.v1.common.Error error = 7;
}
