// file: pkg/health/proto/responses/set_health_response.proto
edition = "2023";

package gcommon.v1.health;

import "google/protobuf/timestamp.proto";
import "common/proto/error.proto";
import "pkg/common/proto/health_status.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/health/proto";

/**
 * Response message for manually setting health status.
 * Contains the result of administratively setting the health status.
 */
message SetHealthResponse {
  // Success status
  bool success = 1;

  // Previous health status
  gcommon.v1.common.MetricsHealthStatus previous_status = 2;

  // New health status
  gcommon.v1.common.MetricsHealthStatus new_status = 3;

  // Timestamp when status was changed
  google.protobuf.Timestamp changed_at = 4;

  // Error information if setting failed
  gcommon.v1.common.Error error = 5;

  // Reason for the manual status change
  string reason = 6;
}
