// file: proto/gcommon/v1/common/types/set_health_request.proto
// file: proto/gcommon/v1/common/types/set_health_request.proto
//
// Request definitions for health module
//

edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/request_metadata.proto";
import "proto/gcommon/v1/metrics/v1/health_status.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/common/messages";

message SetHealthRequest {
  // Service name to update
  string service = 1;

  // Desired health status
  gcommon.v1.metrics.MetricsHealthStatus status = 2;

  // Request metadata for auditing
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
