// file: proto/gcommon/v1/metrics/v1/metrics_health_info.proto
// version: 1.0.0
// guid: e7ab1793-c874-4b03-ad41-59257c2f7cca

edition = "2023";

package gcommon.v1.metrics;


import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "gcommon/v1/metrics/enums/health_status.proto";









option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/metrics";

message MetricsHealthInfo {
  MetricsHealthStatus overall_status = 1;
  repeated string health_checks = 2;
  repeated string warnings = 3;
  google.protobuf.Timestamp last_check = 4;
}
