// file: proto/gcommon/v1/metrics/v1/health_status.proto
// version: 1.0.0
// guid: c1d2e3f4-567c-912b-6789-234567890123

edition = "2023";

package gcommon.v1.metrics.v1.health_status;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/proto/gcommon/v1/metrics/v1/health_status";

enum MetricsHealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
  HEALTH_STATUS_UNKNOWN = 4;
}
