// file: proto/gcommon/v1/queue/messages/get_queue_health_response.proto
// version: 1.0.0
// guid: ca800078-3add-48f9-9559-c95d23232cea

edition = "2023";

package gcommon.v1.queue;

import "gcommon/v1/queue/messages/cluster_health.proto";
import "gcommon/v1/queue/messages/queue_health.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/queue";

message GetQueueHealthResponse {
  // Health status for each queue
  repeated QueueHealth queue_health = 1;

  // Overall cluster health
  ClusterHealth cluster_health = 2;
}
